sinalcabo/force-app/main/default/objects/SC_NOS_Polling__e/SC_NOS_Polling__e.object-meta.xml
<CustomObject>
    <description>Pedido de corrida da entrada de ordens da NOS. Quem publica é o agendador ou uma pessoa; quem executa é o subscritor do evento, que corre como o utilizador de integração. É assim que os registos ficam com o CreatedBy da integração e não de quem agendou.</description>
    <label>Corrida da NOS</label>
    <pluralLabel>Corridas da NOS</pluralLabel>
</CustomObject>