sinalcabo/force-app/main/default/objects/SC_NOS_Polling__e/fields/Janela_Fim__c.field-meta.xml
<CustomField>
    <fullName>Janela_Fim__c</fullName>
    <description>Fim da janela de leitura pedida. Só vem preenchido nas corridas com janela explícita.</description>
    <label>Fim da janela</label>
    <type>DateTime</type>
</CustomField>