sinalcabo/force-app/main/default/objects/SC_NOS_Polling__e/fields/Janela_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Janela_Inicio__c</fullName>
    <description>Início da janela de leitura pedida. Só vem preenchido nas corridas com janela explícita.</description>
    <label>Início da janela</label>
    <type>DateTime</type>
</CustomField>