sinalcabo/force-app/main/default/objects/SC_NOS_Polling__e/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <description>Quem pediu a corrida: o agendador, uma pessoa pelo Flow, ou um script de operação.</description>
    <label>Origem do pedido</label>
    <length>40</length>
    <type>Text</type>
</CustomField>