sinalcabo/force-app/main/default/objects/SC_NOS_Polling__e/fields/Tipo_Corrida__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Corrida__c</fullName>
    <description>Que passo do ciclo se pede. Vazio vale por Abertas, que é a cadeia normal.</description>
    <label>Tipo de corrida</label>
    <length>40</length>
    <type>Text</type>
</CustomField>